istio-canary/test-walle-deploymentV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-walle-v2
  labels:
    app: test-walle
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-walle
      version: v2
  template:
    metadata:
      labels:
        app: test-walle
        version: v2
    spec:
      serviceAccountName: walle-account
      containers:
      - name: test-walle
        image: demo:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
