istio-canary/test-walle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-walle
  labels:
    app: test-walle
    service: test-walle
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: test-walle
