istio-canary/test-walle-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-walle
spec:
  host: test-walle
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
