istio-canary/test-walle-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: walle
  namespace: default
spec:
  gateways:
  - qingfeng-deve
  hosts:
  - test.ciwei.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: test-walle
        subset: v1
      weight: 50
    - destination:
        host: test-walle
        subset: v2
      weight: 50
